2001-04-23  Didier Verna  <didier@xemacs.org>

	* cus-edit.el (custom-variable-pre-save): New.
	* cus-edit.el (custom-variable-post-save): New.
	* cus-edit.el (custom-variable-save): use them.
	* cus-edit.el (custom-face-pre-save): New.
	* cus-edit.el (custom-face-post-save): New.
	* cus-edit.el (custom-face-save): use them.
	* cus-edit.el (custom-group-pre-save): New.
	* cus-edit.el (custom-group-post-save): New.
	* cus-edit.el (custom-group-save): use them.
	* cus-edit.el (Custom-save): use the pre/post functions above,
	call `custom-save-all' only once.
	* cus-edit.el (custom-variable-pre-reset-standard): New.
	* cus-edit.el (custom-variable-post-reset-standard): New.
	* cus-edit.el (custom-variable-reset-standard): use them.
	* cus-edit.el (custom-face-pre-reset-standard): New.
	* cus-edit.el (custom-face-post-reset-standard): New.
	* cus-edit.el (custom-face-reset-standard): use them.
	* cus-edit.el (custom-group-pre-reset-standard): New.
	* cus-edit.el (custom-group-post-reset-standard): New.
	* cus-edit.el (Custom-reset-standard): use them.
	* cus-edit.el (custom-face-reset-saved): use the pre/post
	functions above, call `custom-save-all' only once.

2001-04-15  Ben Wing  <ben@xemacs.org>

	* about.el:
	* about.el (about-headline-face): New.
	* about.el (about-link-face): New.
	* about.el (about-current-release-maintainers): New.
	* about.el (about-other-current-hackers): New.
	* about.el (about-once-and-future-hackers): New.
	* about.el (about-lookup-url): New.
	* about.el (about-get-buffer):
	* about.el (about-mailto-link): New.
	* about.el (about-finish-buffer):
	* about.el (about-xemacs):
	* about.el (about-features): Removed.
	* about.el (about-advantages): New.
	* about.el (about-maintainer-info): Removed.
	* about.el (about-personal-info): New.
	* about.el (about-hacker-contribution): New.
	* about.el (about-maintainer):
	* about.el (about-show-linked-info):
	* about.el (about-hackers):
	Major revamping.  Rewriting of most of the text, improve the